Add x86_64 to 'all' ABI Android builds

--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -49,7 +49,7 @@ android {
                  '-Wno-unknown-warning-option'
 
         if (abi == 'all') {
-          abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
+          abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         } else {
           abiFilters abi.split(',')
         }
