--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,9 @@ jobs:
       - run: apt-get update && apt-get install -y wget
       - run: make cmake-linux CMAKE_OPTIONS="-DTANGRAM_USE_SYSTEM_FONT_LIBS=1 -DTANGRAM_USE_SYSTEM_GLFW_LIBS=1 -DTANGRAM_BUILD_TESTS=1 -DTANGRAM_BUILD_BENCHMARKS=1 -GNinja"
       - run: ninja -C build/linux -j 4
-      - run: source scripts/run_tests.sh build/linux
+      - run: source scripts/run_tests.sh build/linux ~/test-results/catch
+      - store_test_results:
+          path: ~/test-results
       - run: source scripts/run_bench.sh build/linux
   build-android:
     docker:
