--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -12,6 +12,12 @@ set(BENCH_SOURCES
   src/template.cpp
 )
 
+add_custom_target(benchmark_resources
+  COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/scenes ${CMAKE_BINARY_DIR}/res
+  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/bench/test_tile_10_301_384.mvt ${CMAKE_BINARY_DIR}/res/tile.mvt
+  COMMENT "Copying benchmark resources into build directory."
+)
+
 # create an executable per bench
 foreach(_src_file_path ${BENCH_SOURCES})
   string(REPLACE ".cpp" "" bench ${_src_file_path})
@@ -48,11 +54,7 @@ foreach(_src_file_path ${BENCH_SOURCES})
     target_compile_definitions(${EXECUTABLE_NAME} PRIVATE TANGRAM_USE_JSCORE=1)
   endif()
 
-  add_custom_command(TARGET ${EXECUTABLE_NAME}
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/scenes ${CMAKE_BINARY_DIR}/res
-    COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/bench/test_tile_10_301_384.mvt ${CMAKE_BINARY_DIR}/res/tile.mvt
-  )
+  add_dependencies(${EXECUTABLE_NAME} benchmark_resources)
 
 endforeach()
 
