--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -80,7 +80,7 @@ android {
 
 dependencies {
   api 'com.squareup.okhttp3:okhttp:3.12.0'
-  implementation 'com.android.support:support-annotations:27.1.1'
+  implementation 'androidx.annotation:annotation:1.1.0'
 }
 
 apply from: 'publishing.gradle'
