Add tests for NetworkDataSource URL operations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ set(TEST_SOURCES
   unit/lngLatTests.cpp
   unit/mapProjectionTests.cpp
   unit/meshTests.cpp
+  unit/networkDataSourceTests.cpp
   unit/sceneImportTests.cpp
   unit/sceneLoaderTests.cpp
   unit/sceneUpdateTests.cpp
