--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run: cd platforms/android && ./gradlew uploadArchives
   build-ios:
     macos:
-      xcode: "10.3.0"
+      xcode: "11.1.0"
     environment:
       HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
@@ -42,12 +42,13 @@ jobs:
       - run: git submodule update --init
       # Install dependencies.
       - run: brew install cmake
-      # Build framework and docs.
+      # Build test app variants. Use simulator target to bypass codesigning.
       - run: make ios-sim BUILD_TYPE=Debug
       - run: make ios-static-sim BUILD_TYPE=Debug
+      - run: make ios-swift-sim BUILD_TYPE=Debug
   build-deploy-ios-snapshot:
     macos:
-      xcode: "10.3.0"
+      xcode: "11.1.0"
     environment:
       HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
@@ -72,7 +73,7 @@ jobs:
           path: ~/pod.zip
   build-deploy-macos-snapshot:
     macos:
-      xcode: "10.3.0"
+      xcode: "11.1.0"
     environment:
       HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
@@ -89,7 +90,7 @@ jobs:
           path: ~/demo.zip
   build-deploy-ios-release:
     macos:
-      xcode: "10.3.0"
+      xcode: "11.1.0"
     environment:
       HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
