iOS snapshot builds use Release mode and run bitcode check

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,14 +58,17 @@ jobs:
       # Install dependencies.
       - run: sudo gem install jazzy --no-document --version 0.10.0
       - run: brew install cmake
-      # Build the framework in debug mode and package it into pod.zip
-      - run: make ios-framework-universal BUILD_TYPE=Debug
+      # Build the framework and package it into pod.zip.
+      - run: make ios-framework-universal BUILD_TYPE=Release
+      # Check that bitcode is included for required archs.
+      - run: source scripts/check_bitcode.sh build/ios/Release-universal/TangramMap.framework/TangramMap armv7 arm64
+      # Build the docs and package them into docs.zip.
       - run: make ios-docs
       - run: cd build/ios-docs && zip -r ~/docs.zip .
       - store_artifacts:
           path: ~/docs.zip
       # To produce the intended structure within the zip archive, we must cd to each file's location.
-      - run: cd build/ios/Debug-universal && zip -r ~/pod.zip TangramMap.framework
+      - run: cd build/ios/Release-universal && zip -r ~/pod.zip TangramMap.framework
       # Add the readme and license files.
       - run: cd platforms/ios/framework && zip ~/pod.zip README.md
       - run: zip ~/pod.zip LICENSE
