--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,16 +84,16 @@ jobs:
             - run: brew install gh
             - run: mv ~/pod.zip ~/tangram-ios-<< pipeline.git.tag >>.zip
             - run: gh release upload << pipeline.git.tag >> ~/tangram-ios-<< pipeline.git.tag >>.zip
-  build-deploy-macos:
+  build-macos:
     executor: macos-executor
     steps:
       # Check out repository with submodules.
       - checkout
       - run: git submodule update --init
       # Install dependencies.
-      - run: brew install cmake
+      - run: brew install cmake ninja
       # Build the MacOS demo app and package it into demo.zip
-      - run: make osx -j 2 MACOSX_DEPLOYMENT_TARGET=10.10.0
+      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 CMAKE_OPTIONS="-GNinja"
       # To produce the intended structure within the zip archive, we must cd to each file's location.
       - run: cd build/osx && zip -r ~/demo.zip tangram.app
       - store_artifacts:
@@ -104,6 +104,7 @@ workflows:
     jobs:
       # Run on all pushes
       - build-test-linux
+      - build-macos
       # Run on pushes to all branches except main
       - build-android:
           filters:
@@ -115,10 +116,6 @@ workflows:
               ignore: main
       # Run on pushes to main
       - build-deploy-android:
-          filters:
-            branches:
-              only: main
-      - build-deploy-macos:
           filters:
             branches:
               only: main
