--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ jobs:
       # Install dependencies.
       - run: brew install cmake ninja
       # Build the MacOS demo app and package it into demo.zip
-      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 CMAKE_OPTIONS="-GNinja"
+      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 BUILD_TYPE=Debug CMAKE_OPTIONS="-GNinja"
       # To produce the intended structure within the zip archive, we must cd to each file's location.
       - run: cd build/osx && zip -r ~/demo.zip tangram.app
       - store_artifacts:
